2006-08-24  Andrew Pinski  <pinskia@physics.uc.edu>

PR tree-opt/28807
        * tree-ssa-operands.c (access_can_touch_variable): Don't say
        the access through a base which has an alias set of 0 cannot
        touch the variable.

2006-08-24  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/28807
        * gcc.c-torture/execute/mayalias-2.c: New test.
        * gcc.dg/tree-ssa/alias-13.c: New test.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116393 138bc75d-0d04-0410-961f-82ee72b054a4